changes/3.18/f39100e121273646ae07e380175dbe5b9c6eda41
drivers/staging/unisys: Let all IOMEM related modules depend on HAS_IOMEM

UNISYS_UISLIB, UNISYS_VISORCHIPSET, and UNISYS_VISORUTIL need HAS_IOMEM,
so depend on it. One of related error (with allmodconfig under um):

    CC [M]  drivers/staging/unisys/uislib/uislib.o
  In file included from drivers/staging/unisys/uislib/uislib.c:34:0:
  drivers/staging/unisys/include/uisutils.h: In function ‘dbg_ioremap_cache’:
  drivers/staging/unisys/include/uisutils.h:88:2: error: implicit declaration of function ‘ioremap_cache’ [-Werror=implicit-function-declaration]
    new = ioremap_cache(addr, size);
    ^
  drivers/staging/unisys/include/uisutils.h:88:6: warning: assignment makes pointer from integer without a cast [enabled by default]
    new = ioremap_cache(addr, size);
        ^
  drivers/staging/unisys/include/uisutils.h: In function ‘dbg_ioremap’:
  drivers/staging/unisys/include/uisutils.h:99:2: error: implicit declaration of function ‘ioremap’ [-Werror=implicit-function-declaration]
    new = ioremap(addr, size);
    ^
  drivers/staging/unisys/include/uisutils.h:99:6: warning: assignment makes pointer from integer without a cast [enabled by default]
    new = ioremap(addr, size);
        ^
  drivers/staging/unisys/include/uisutils.h: In function ‘dbg_iounmap’:
  drivers/staging/unisys/include/uisutils.h:108:2: error: implicit declaration of function ‘iounmap’ [-Werror=implicit-function-declaration]
    iounmap(addr);
    ^

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Greg Kroah-Hartman <gregkh@linuxfoundation.org>

